cpp version of montgomery calculations

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,21 @@ rsa-java/.classpath
 
 rsa-java/.settings/org.eclipse.jdt.core.prefs
 
+
+*.o
+
+*.d
+
+rsa-cpp/.cproject
+
+rsa-cpp/.project
+
+rsa-cpp/Debug/makefile
+
+rsa-cpp/Debug/objects.mk
+
+rsa-cpp/Debug/RSATestBench
+
+rsa-cpp/Debug/sources.mk
+
+rsa-cpp/Debug/src/subdir.mk
